<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="#32D3D3D3"
    >

    <ImageView
        android:id="@+id/badge"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/flag"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="90dp"
        app:srcCompat="@drawable/register" />


    <EditText
        android:id="@+id/FName"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop = "30dp"
        android:textColorHint="#006400"
        android:textColor="#006400"
        android:hint="@string/fname"
        android:inputType="textPersonName"
        />

    <EditText
        android:id="@+id/last_name"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop = "20dp"
        android:textColorHint="#006400"
        android:textColor="#006400"
        android:hint="@string/lname"
        android:inputType="textPersonName"

        />

    <EditText
        android:id="@+id/email"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop = "20dp"
        android:textColorHint="#006400"
        android:textColor="#006400"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        />



    <Button
        android:id="@+id/button_register_next"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_rectangle_color"
        android:text="NEXT"
        android:textColor="#FFFFFF"
        android:onClick="registerNext"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textStyle="bold"
            android:textColor="#006400"
            android:hint="@string/already_registered"
            />

        <TextView
            android:id="@+id/textview_login"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textStyle="bold"
            android:textColor="#006400"
            android:text="@string/login"
            android:padding="10dp"
            android:onClick="moveToLogin"/>

    </LinearLayout>

</LinearLayout>