<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#32D3D3D3"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/badge"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/flag"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="Log in"
        android:textColor="#006400"
        android:textSize="40sp" />


    <EditText
        android:id="@+id/edittext_email"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="80dp"
        android:drawableLeft="@drawable/ic_person"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="#006400"
        android:textColorHint="#006400" />

    <EditText
        android:id="@+id/edittext_pass"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/ic_lock"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="#006400"
        android:textColorHint="#006400" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_rectangle_color"
        android:onClick="loginButton"
        android:text="Login"
        android:textColor="#FFFFFF" />



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/no_account"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:onClick="moveToRegister"
            android:paddingLeft="10dp"
            android:text="@string/register"
            android:textColor="#006400"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:clickable="true"
        android:paddingLeft="10dp"
        android:text="@string/forgot"
        android:textColor="#006400"
        android:textStyle="bold" />


</LinearLayout>